src/main/java/com/example/demo/error/apierror/ApiSubError.java
package com.example.demo.error.apierror;

public abstract class ApiSubError {
    
}
